# ChangeLog for net-p2p/deluge
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.99 2008/10/31 12:31:48 armin76 Exp $

*deluge-1.0.4 (31 Oct 2008)

  31 Oct 2008; Raúl Porcel <armin76@gentoo.org> +deluge-1.0.4.ebuild:
  Version bump

*deluge-1.0.3 (20 Oct 2008)

  20 Oct 2008; Raúl Porcel <armin76@gentoo.org> +deluge-1.0.3.ebuild,
  deluge-9999.ebuild:
  Version bump

*deluge-1.0.2 (11 Oct 2008)

  11 Oct 2008; Raúl Porcel <armin76@gentoo.org> +deluge-1.0.2.ebuild:
  Version bump

  24 Sep 2008; Raúl Porcel <armin76@gentoo.org> -deluge-0.5.9999.ebuild:
  Remove live ebuild of the 0.5 branch

*deluge-1.0.0 (22 Sep 2008)

  22 Sep 2008; Raúl Porcel <armin76@gentoo.org> -files/setup.patch,
  -deluge-1.0.0_rc9-r1.ebuild, +deluge-1.0.0.ebuild:
  Version bump

*deluge-1.0.0_rc9-r1 (20 Sep 2008)

  20 Sep 2008; Raúl Porcel <armin76@gentoo.org> -deluge-1.0.0_rc9.ebuild,
  +deluge-1.0.0_rc9-r1.ebuild:
  Fix SRC_URI, bug #238070

*deluge-1.0.0_rc9 (15 Sep 2008)

  15 Sep 2008; Raúl Porcel <armin76@gentoo.org> -deluge-1.0.0_rc8.ebuild,
  +deluge-1.0.0_rc9.ebuild:
  Version bump

  03 Sep 2008; Raúl Porcel <armin76@gentoo.org> -deluge-0.5.9.1.ebuild,
  deluge-0.5.9.3.ebuild:
  x86 stable, remove old

  03 Sep 2008; Santiago M. Mola <coldwind@gentoo.org> deluge-0.5.9.3.ebuild:
  amd64 stable

*deluge-1.0.0_rc8 (27 Aug 2008)

  27 Aug 2008; Raúl Porcel <armin76@gentoo.org> -deluge-1.0.0_rc7.ebuild,
  +deluge-1.0.0_rc8.ebuild:
  Version bump

*deluge-1.0.0_rc7 (25 Aug 2008)

  25 Aug 2008; Raúl Porcel <armin76@gentoo.org> -deluge-1.0.0_rc6.ebuild,
  +deluge-1.0.0_rc7.ebuild:
  Version bump

*deluge-1.0.0_rc6 (14 Aug 2008)

  14 Aug 2008; Raúl Porcel <armin76@gentoo.org> -deluge-1.0.0_rc5.ebuild,
  +deluge-1.0.0_rc6.ebuild:
  Version bump

  07 Aug 2008; Raúl Porcel <armin76@gentoo.org> deluge-1.0.0_rc5.ebuild,
  deluge-9999.ebuild:
  Add missing dep, bug #234026

*deluge-1.0.0_rc5 (04 Aug 2008)
