@@ -5,11 +5,13 @@ DIST deluge-1.0.0.tar.gz 2983635 RMD160 9151af0ccd95b0a9f8ed020559a9ae1e30916840
 DIST deluge-1.0.2.tar.gz 2982877 RMD160 6cb485411f9d3e18a3b3fbc8c2238432c1e5a1aa SHA1 afae477e810fa9bf99d8ca9b85bad010db98482b SHA256 67a85cc65380df8ce5de2d73b95659a29d68cb78c8e560b9b94436e73220f022
 DIST deluge-1.0.3.tar.gz 2994972 RMD160 bc1005ae4466aacd16adb6d41051d778956b9d21 SHA1 45d00944b6773023ef15b0d5ec6760ab381f3ffe SHA256 a182958127887d37b6f96782c73dc677fa17a0702a1c2351cebf2ae8bfe37350
 DIST deluge-1.0.4.tar.gz 2996569 RMD160 13eced6fbfd7a819f7891bcedede28e3c1ea06d6 SHA1 e2b9983210e51947d8a65a1653d1d079f8fe40f3 SHA256 93f45ef8e836cd721757d2561ffa7e5abe55b69e66355caf46f0eb2f4182a7b1
+DIST deluge-1.0.5.tar.gz 2977891 RMD160 0e62f9cecfcbba772f70e9109a923b4d73f96e5e SHA1 77392df71ef5087aaac5e97ffb25ade589967073 SHA256 214a0984d8af0ad97fc90a070c743d789ce8c70bb3d5d68277730aadb57cee22
 EBUILD deluge-0.5.9.3.ebuild 1309 RMD160 7d3570e17e9dc7894675170808cde86725ee8ae0 SHA1 8646c2124392212f6b9e3d87c61242f14553fec9 SHA256 8109297079be09a677aa05c0207c5d7681e59893cfc3952e3233da478b3ef9e1
 EBUILD deluge-1.0.0.ebuild 1714 RMD160 0b91575c85ba0677673662a7fc1de5f95465fa26 SHA1 287379c48427d58ff043f6458a5cb5b2775390a4 SHA256 2db024a8d82a2b53b8984b9e26c369c6fca8df14907c411cbb4c42a24e7dec0d
 EBUILD deluge-1.0.2.ebuild 1714 RMD160 f382d70ff76607ee86f3b5623a362b18d50ece74 SHA1 d939572107c5f152016ad1e0992c787f4fbcd1b8 SHA256 a6a0fe3e20aaa9edbb8656f87df0a0d0d763603425ac0cf495b295a21cc69fca
 EBUILD deluge-1.0.3.ebuild 1714 RMD160 121d3d7b248fa6dd734fc6d943512bf3a15612af SHA1 0d1d8fcb4ba5282fa9dd33cd93b1b9f127c56abb SHA256 3809c112e48d6e970383532056c0aec14cc8d4d003204512cb71b862bc353553
 EBUILD deluge-1.0.4.ebuild 1714 RMD160 99bef5b8cc8be0638a23f467df92744909d656b9 SHA1 0c4a2098f7dc1fe3a5b28b80f7bda6ab2b357abd SHA256 322bda97c06fa08340fb2baff443043a584319a720afb7dc79ed948e5f61668c
+EBUILD deluge-1.0.5.ebuild 1714 RMD160 3c8d8e1f7091ae4ed6c21d0f97c1f18a15f04c32 SHA1 12dfa98107d3f4598bc6a1a24d7433df12adffb3 SHA256 9b08342b5e28deeefac2909221f9e4ce3e90e4636254d2511c9cc96df7242859
 EBUILD deluge-9999.ebuild 1725 RMD160 353efaee485d305e900b14a33cba55803b4f3ff3 SHA1 8f62852e44b312531bb3b4980342dc59b85fbbac SHA256 5d64c93bd0195cf04e0179b91c62618d552ba58a3bfb868d421ec78aa69cfa42
-MISC ChangeLog 13897 RMD160 f808644c1e1b94700112a6976531125348b705b3 SHA1 ead20e0102209cdd8c0d54843d3500fae1c70aff SHA256 d0d34cb236d84e5fade452e83655345d7a396224ed80101489bcf9df70feaaee
+MISC ChangeLog 14014 RMD160 d5516fcc2370439c5d19ba66dfbf638e9263413e SHA1 be62effdba5934d1b08ab8ceb88951670f3af031 SHA256 2320e8edf33ee62ead611cd47a8b8f63ed34490823db373ace9efbcdf1609910
 MISC metadata.xml 222 RMD160 0dc4b04f31dcc89402f87c352327fe327b3cf31f SHA1 540337d5841f15b43186e5858f9e24032567de08 SHA256 713b9d1548682d5c1c3686a7b0711acf065a8fa4f386883ace90359d3dceb966
