@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/deluge
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.99 2008/10/31 12:31:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.100 2008/11/11 23:17:12 armin76 Exp $
+
+*deluge-1.0.5 (11 Nov 2008)
+
+  11 Nov 2008; Raúl Porcel <armin76@gentoo.org> +deluge-1.0.5.ebuild:
+  Version bump
 
 *deluge-1.0.4 (31 Oct 2008)
 
